kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
  namespace: devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      containers:
        - name: devsecops-app
          image: devsecops-project:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
