kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app
  namespace: devsecops
spec:
  selector:
    app: devsecops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
